--- a/package.json
+++ b/package.json
@@ -12,15 +12,25 @@
     "start": "node dist/index.js",
     "dev": "tsx src/index.ts"
   },
-  "keywords": ["mcp", "huly", "model-context-protocol"],
+  "keywords": [
+    "mcp",
+    "huly",
+    "model-context-protocol"
+  ],
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@hcengineering/api-client": "^0.7.18",
+    "@hcengineering/core": "^0.7.4",
+    "@hcengineering/rank": "^0.7.3",
+    "@hcengineering/tracker": "^0.7.0",
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "ws": "^5.0.0"
+    "pg": "^8.17.2",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.16.0",
     "@types/ws": "^8.5.0",
     "tsx": "^4.0.0",
     "typescript": "^5.0.0"
